# advanced_database

./: .gitignore  CMakeLists.txt  LICENSE  README.md  architectural_design.md  auth-fix-issue-links.txt  auth_fix_issues.ps1  database_system_learning_roadmap.md  package.json  phase2-child-issue-links.txt  phase2_child_issues.ps1  phase3-child-issue-links.txt  phase3-issue-links.txt  phase3_child_issues.ps1  phase3_objective_issues.ps1  phase4-child-issue-links.txt  phase4-issue-links.txt  phase4_child_issues.ps1  phase4_objective_issues.ps1  phase5-child-issue-links.txt  phase5-issue-links.txt  phase5_child_issues.ps1  phase5_objective_issues.ps1  phase6-child-issue-links.txt  phase6-issue-links.txt  phase6_child_issues.ps1  phase6_objective_issues.ps1  roadmap.md  timeline.md  upgrade-sql-ui-issue-links.txt  upgrade_sql_ui_issues.ps1
api/: Database.test.ts  README.md  app.ts  auth.ts  engineClient.ts  index.ts  jest.config.js  package-lock.json  package.json  pool.ts  prepared-statements.ts  swagger-config.ts  swagger-jsdoc.d.ts  tsconfig.json  validation.ts
data/: advanced.db
docs/: week1-2_notes.md  week3-4_notes.md
engine/: BTreeIndex.cpp  BTreeIndex.h  BufferPool.cpp  BufferPool.h  CMakeLists.txt  CatalogTypes.h  Database.cpp  Database.h  DatabaseTest.cpp  EngineMain.cpp  FileManager.cpp  FileManager.h  IndexManager.cpp  IndexManager.h  LockManager.cpp  LockManager.h  MvccManager.cpp  MvccManager.h  Page.cpp  Page.h  Predicate.h  QueryExecution.cpp  QueryExecution.h  QueryPlanner.cpp  QueryPlanner.h  RecordLayout.cpp  RecordLayout.h  SlottedPage.cpp  SlottedPage.h  SqlAst.h  SqlLexer.cpp  SqlLexer.h  SqlParser.cpp  SqlParser.h  SqlToken.h  Statistics.cpp  Statistics.h  StorageConfig.h  TableCatalog.cpp  TableCatalog.h  (+5 more)
ui/: README.md  index.html  package-lock.json  (+3 more)
(+22 files in other folders)
